# plugins

./: .gitpod.yml  Cargo.toml  LICENSE  README.md
builtins/: README.md
builtins/mangadex/: Cargo.toml
builtins/mangadex/src/: lib.rs  parse.rs
interfaces/: Cargo.toml
interfaces/src/: enums.rs  fn_types.rs  lib.rs  macros.rs  structs.rs  traits.rs
plugins/mangadex/: Cargo.toml
plugins/mangasee/: Cargo.toml
plugins/mangasee/src/: lib.rs
shared/: Cargo.toml
shared/src/: enums.rs  fn_types.rs  lib.rs  structs.rs  types.rs
