[package]
name = "mangasee"
description = "Plugin for https://mangasee123.com/"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
scraper = { workspace = true }
headless = { workspace = true }
extism-pdk = { workspace = true }
interfaces = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
